Change countdown labels to shorter format
Updated countdown display format in index.html.

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
       const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
       countdownElement.innerHTML =
-        days + "" "Gün " +
-        hours + "" " Saat " +
-        minutes + "" "Dakika " +
-        seconds + "" "Saniye";
+        days + "G " +
+        hours + "S " +
+        minutes + "D " +
+        seconds + "Sn";
 
       if (days <= 30) {
         countdownElement.classList.add("warning");
