--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
     }
 
     body {
-      background-color: black;
+      background: black;
       color: white;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
       font-family: Arial, sans-serif;
     }
 
-    #countdown {
-      font-size: 8vw; /* Telefona uyumlu */
+    #container {
+      text-align: center;
+    }
+
+    .time {
+      font-size: 10vw;
       font-weight: bold;
+      line-height: 1.3;
     }
 
     .warning {
@@ -36,19 +40,28 @@
 
 <body>
 
-  <div id="countdown"></div>
+  <div id="container">
+    <div class="time" id="days">-- Gün</div>
+    <div class="time" id="hours">-- Saat</div>
+    <div class="time" id="minutes">-- Dakika</div>
+    <div class="time" id="seconds">-- Saniye</div>
+  </div>
 
   <script>
     const yksDate = new Date("June 20, 2026 10:15:00").getTime();
-    const countdownElement = document.getElementById("countdown");
 
-    setInterval(function () {
+    const daysEl = document.getElementById("days");
+    const hoursEl = document.getElementById("hours");
+    const minutesEl = document.getElementById("minutes");
+    const secondsEl = document.getElementById("seconds");
 
+    function updateCountdown() {
       const now = new Date().getTime();
       const distance = yksDate - now;
 
       if (distance <= 0) {
-        countdownElement.innerHTML = "YKS BAŞLADI";
+        document.getElementById("container").innerHTML = 
+          '<div class="time">YKS BAŞLADI</div>';
         return;
       }
 
@@ -57,17 +70,21 @@
       const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
       const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-      countdownElement.innerHTML =
-        days + "G " +
-        hours + "S " +
-        minutes + "D " +
-        seconds + "Sn";
+      daysEl.innerHTML = days + " Gün";
+      hoursEl.innerHTML = hours + " Saat";
+      minutesEl.innerHTML = minutes + " Dakika";
+      secondsEl.innerHTML = seconds + " Saniye";
 
       if (days <= 30) {
-        countdownElement.classList.add("warning");
+        daysEl.classList.add("warning");
+        hoursEl.classList.add("warning");
+        minutesEl.classList.add("warning");
+        secondsEl.classList.add("warning");
       }
+    }
 
-    }, 1000);
+    updateCountdown();
+    setInterval(updateCountdown, 1000);
   </script>
 
 </body>
