--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
 
     .time {
-      font-size: 10vw;
+      font-size: 9vw;
       font-weight: bold;
       line-height: 1.3;
     }
@@ -45,6 +45,7 @@
     <div class="time" id="hours">-- Saat</div>
     <div class="time" id="minutes">-- Dakika</div>
     <div class="time" id="seconds">-- Saniye</div>
+    <div class="time" id="milliseconds">-- Salise</div>
   </div>
 
   <script>
@@ -54,13 +55,14 @@
     const hoursEl = document.getElementById("hours");
     const minutesEl = document.getElementById("minutes");
     const secondsEl = document.getElementById("seconds");
+    const msEl = document.getElementById("milliseconds");
 
     function updateCountdown() {
       const now = new Date().getTime();
       const distance = yksDate - now;
 
       if (distance <= 0) {
-        document.getElementById("container").innerHTML = 
+        document.getElementById("container").innerHTML =
           '<div class="time">YKS BAŞLADI</div>';
         return;
       }
@@ -70,21 +72,23 @@
       const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
       const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
+      const milliseconds = Math.floor((distance % 1000) / 10); // 00-99
+
       daysEl.innerHTML = days + " Gün";
       hoursEl.innerHTML = hours + " Saat";
       minutesEl.innerHTML = minutes + " Dakika";
       secondsEl.innerHTML = seconds + " Saniye";
+      msEl.innerHTML = milliseconds + " Salise";
 
       if (days <= 30) {
-        daysEl.classList.add("warning");
-        hoursEl.classList.add("warning");
-        minutesEl.classList.add("warning");
-        secondsEl.classList.add("warning");
+        document.querySelectorAll(".time").forEach(el =>
+          el.classList.add("warning")
+        );
       }
     }
 
     updateCountdown();
-    setInterval(updateCountdown, 1000);
+    setInterval(updateCountdown, 10);
   </script>
 
 </body>
