--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
 
     .time {
-      font-size: 9vw;
+      font-size: 8vw;
       font-weight: bold;
       line-height: 1.3;
     }
@@ -41,11 +41,11 @@
 <body>
 
   <div id="container">
-    <div class="time" id="days">-- Gün</div>
-    <div class="time" id="hours">-- Saat</div>
-    <div class="time" id="minutes">-- Dakika</div>
-    <div class="time" id="seconds">-- Saniye</div>
-    <div class="time" id="milliseconds">-- Salise</div>
+    <div class="time" id="days"></div>
+    <div class="time" id="hours"></div>
+    <div class="time" id="minutes"></div>
+    <div class="time" id="seconds"></div>
+    <div class="time" id="milliseconds"></div>
   </div>
 
   <script>
@@ -58,7 +58,7 @@
     const msEl = document.getElementById("milliseconds");
 
     function updateCountdown() {
-      const now = new Date().getTime();
+      const now = Date.now();
       const distance = yksDate - now;
 
       if (distance <= 0) {
@@ -71,14 +71,13 @@
       const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
       const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
       const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-      const milliseconds = Math.floor((distance % 1000) / 10); // 00-99
+      const milliseconds = distance % 1000; // 0-999
 
       daysEl.innerHTML = days + " Gün";
       hoursEl.innerHTML = hours + " Saat";
       minutesEl.innerHTML = minutes + " Dakika";
       secondsEl.innerHTML = seconds + " Saniye";
-      msEl.innerHTML = milliseconds + " Salise";
+      msEl.innerHTML = milliseconds + " ms";
 
       if (days <= 30) {
         document.querySelectorAll(".time").forEach(el =>
@@ -88,7 +87,7 @@
     }
 
     updateCountdown();
-    setInterval(updateCountdown, 10);
+    setInterval(updateCountdown, 10); // 10ms update
   </script>
 
 </body>
